<resources>
    <string name="app_name" translatable="false">Memorex</string>
    <string name="start_string_app_name">start Memorex</string>
    <string name="about_this_app">About Memorex</string>
    <string name="about_text">"&lt;u>Project website:&lt;/u> https://david.hebbeker.info/memorex&lt;br/>
&lt;u>version name:&lt;/u> %1$s"
</string>
    <!-- Strings related to Settings -->
    <string name="pref_title_speed">Select game speed</string>
    <string name="title_activity_settings">Settings</string>
    <string name="preference_speed_list" translatable="false">speed_list</string>
    <string name="preference_switch_sound" translatable="false">switch_preference_sound</string>
    <string name="preference_switch_autoUpdate" translatable="false">switch_preference_autoUpdate</string>
    <string name="show_high_score">Show high score</string>
    <string name="high_score_display">Current high score is: %1$s</string>
    <string name="search_for_updates">Search for updates</string>
    <string name="gitHubUsername">dhebbeker</string>
    <string name="gitHubRepositoryName">memorex-android</string>
    <string-array name="pref_speed_titles">
        <item>Slow</item>
        <item>Medium</item>
        <item>Fast</item>
    </string-array>
    <string-array name="pref_speed_values">
        <item>350</item>
        <item>250</item>
        <item>150</item>
    </string-array>
</resources>
