<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="250"
        android:entries="@array/pref_speed_titles"
        android:entryValues="@array/pref_speed_values"
        android:key="@string/preference_speed_list"
        android:title="@string/pref_title_speed" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/preference_switch_sound"
        android:summaryOff="Game sounds are played."
        android:summaryOn="No game sounds are played."
        android:title="Silent" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/preference_switch_autoUpdate"
        android:summaryOff="Available updates are not notified."
        android:summaryOn="Updates are searched on startup."
        android:title="Automatic update notification" />

</PreferenceScreen>
