<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@android:drawable/ic_menu_myplaces"
        android:onClick="showHighScore"
        android:title="@string/show_high_score"
        android:titleCondensed="high score" />
    <item
        android:icon="@drawable/ic_system_update_white_24dp"
        android:onClick="updateNow"
        android:title="@string/search_for_updates"
        android:titleCondensed="update!" />
    <item
        android:icon="@android:drawable/ic_menu_info_details"
        android:onClick="showLicenses"
        android:title="Software Licenses"
        android:titleCondensed="Licensing" />
    <item
        android:icon="@android:drawable/ic_menu_info_details"
        android:onClick="showAbout"
        android:title="@string/about_this_app"
        android:titleCondensed="About" />

    <!-- “Settings” should be below all other items (except Help & Feedback)
         https://material.io/guidelines/patterns/settings.html#settings-placement
    -->
    <item
        android:icon="@android:drawable/ic_menu_preferences"
        android:onClick="showSettings"
        android:title="@string/title_activity_settings" />
</menu>